// Vitest Snapshot v1

exports[`content-rich > code frame 1`] = `
"<p>Testing code block</p><p><pre lang=\\"ts\\">import { useMouse, usePreferredDark } from &#39;@vueuse/core&#39;
// tracks mouse position
const { x, y } = useMouse()
// is the user prefers dark theme
const isDark = usePreferredDark()</pre></p>"
`;

exports[`content-rich > code frame 2 1`] = `
"<p>
  <span class=\\"h-card\\"
    ><a
      class=\\"u-url mention\\"
      rel=\\"nofollow noopener noreferrer\\"
      to=\\"/mas.to/@antfu\\"
    ></a
  ></span>
  Testing<br />
  <pre lang=\\"ts\\">const a = hello</pre>
</p>
"
`;

exports[`content-rich > code frame empty 1`] = `"<p><pre></pre><br></p>"`;

exports[`content-rich > code frame no lang 1`] = `"<p><pre>hello world</pre><br>no lang</p>"`;

exports[`content-rich > custom emoji 1`] = `
"Daniel Roe
<img
  src=\\"https://media.mas.to/masto-public/cache/custom_emojis/images/000/288/667/original/c96ba3cb0e0e1eac.png\\"
  alt=\\":nuxt:\\"
  class=\\"custom-emoji\\"
  data-emoji-id=\\"nuxt\\"
/>
"
`;

exports[`content-rich > empty 1`] = `""`;

exports[`content-rich > link + mention 1`] = `
"<p>
  Happy
  <img
    src=\\"/emojis/twemoji/1f917.svg\\"
    alt=\\"🤗\\"
    class=\\"iconify-emoji iconify-emoji--twemoji\\"
  />
  we’re now using
  <span class=\\"h-card\\"
    ><a
      class=\\"u-url mention\\"
      rel=\\"nofollow noopener noreferrer\\"
      to=\\"/mas.to/@vitest\\"
    ></a
  ></span>
  (migrated from chai+mocha)
  <a
    href=\\"https://github.com/ayoayco/astro-reactive-library/pull/203\\"
    rel=\\"nofollow noopener noreferrer\\"
    target=\\"_blank\\"
    ><span class=\\"invisible\\">https://</span
    ><span class=\\"ellipsis\\">github.com/ayoayco/astro-react</span
    ><span class=\\"invisible\\">ive-library/pull/203</span></a
  >
</p>
"
`;
